// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthButton renders correctly 1`] = `
<a
  className="auth0-lock-social-button auth0-lock-social-big-button"
  data-provider="strategy"
  onClick={[Function]}
  style={Object {}}
  type="button"
>
  <div
    className="auth0-lock-social-button-text"
    style={Object {}}
  >
    <div
      className="auth0-lock-social-button-icon"
      style={Object {}}
    />
    label
  </div>
</a>
`;

exports[`AuthButton renders with style customizations 1`] = `
<a
  className="auth0-lock-social-button auth0-lock-social-big-button"
  data-provider="strategy"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "primaryColor",
    }
  }
  type="button"
>
  <div
    className="auth0-lock-social-button-text"
    style={
      Object {
        "color": "foregroundColor",
      }
    }
  >
    <div
      className="auth0-lock-social-button-icon"
      style={
        Object {
          "backgroundImage": "url('test')",
        }
      }
    />
    label
  </div>
</a>
`;
